# opus_trade_bot

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  README.md  build_log.txt  build_log2.txt  vcpkg.json
config/: config.yaml.example
include/opus/core/: memory_pool.hpp  ring_buffer.hpp  types.hpp
include/opus/exchange/binance/: client.hpp
include/opus/market/: order_book.hpp
include/opus/network/: rest_client.hpp  websocket_client.hpp
include/opus/order/: order_manager.hpp  position_tracker.hpp  risk_manager.hpp
include/opus/risk/: risk_manager.hpp
include/opus/strategy/: order_book_imbalance.hpp  signal_filter.hpp
include/opus/strategy/indicators/: bollinger.hpp  ema.hpp  indicator_base.hpp  macd.hpp  rsi.hpp
include/opus/utils/: logger.hpp
src/: main.cpp
src/core/: event_loop.cpp  memory_pool.cpp  ring_buffer.cpp
src/exchange/binance/: auth.cpp  client.cpp  client_fixed.cpp  client_temp.cpp  market_data.cpp
src/market/: binary_writer.cpp  kline.cpp  order_book.cpp  ticker.cpp
src/network/: rate_limiter.cpp  rest_client.cpp  websocket_client.cpp
src/order/: order_manager.cpp  position_tracker.cpp  risk_manager.cpp
src/strategy/: order_book_imbalance.cpp  signal_generator.cpp
src/strategy/indicators/: bollinger.cpp  ema.cpp  macd.cpp  rsi.cpp
tests/: CMakeLists.txt
tests/integration/: test_trading_flow.cpp
tests/unit/: test_bollinger.cpp  test_macd.cpp  test_memory_pool.cpp  test_order_book.cpp  test_order_book_imbalance.cpp  test_ring_buffer.cpp  test_rsi.cpp  test_types.cpp
